@@ -90,6 +90,7 @@ struct cmdline_options {
     const char *script;
     VALUE script_name;
     VALUE e_script;
+    VALUE e_script_pos;
     struct {
 	struct {
 	    VALUE name;
@@ -719,9 +720,11 @@ proc_options(int argc, char **argv, struct cmdline_options *opt)
 		opt->e_script = rb_str_new(0, 0);
 		if (opt->script == 0)
 		    opt->script = "-e";
+		opt->e_script_pos = rb_ary_new();
 	    }
 	    rb_str_cat2(opt->e_script, s);
 	    rb_str_cat2(opt->e_script, "\n");
+	    rb_ary_push(opt->e_script_pos, INT2FIX(argc0 - argc));
 	    break;
 
 	  case 'r':
@@ -1100,6 +1103,15 @@ process_options(VALUE arg)
     rb_enc_set_default_external(rb_enc_from_encoding(enc));
 #ifdef _WIN32
     if ((argc = rb_w32_parse_cmdline(&argv, rb_enc_name(enc))) != 0) {
+	if (opt->e_script && opt->e_script_pos) {
+	    opt->e_script = rb_str_new(0, 0);
+	    for (i = 0; i < RARRAY_LEN(opt->e_script_pos); ++i) {
+		int pos = FIX2INT(RARRAY_PTR(opt->e_script_pos)[i]);
+		rb_enc_str_buf_cat(opt->e_script, argv[pos], strlen(argv[pos]),
+				   enc);
+		rb_str_cat2(opt->e_script, "\n");
+	    }
+	}
 	argc -= opnum;
 	argv += opnum;
 	ruby_set_argv(argc, argv);
